--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="about-box-item intro-pic">
                     <div class="about-box-item about-item-left">
                         <h1>Hi, I'm Prakash Neupane</h1>
-                        <p>Born and brough up amidst the Lush green Himalayas of Nepal, currently residing in the Beautiful British Columbia, I am Prakash Neupane, an individual full of life, zeal, enthusiasm, and dedication. I  am a team-player, and a great decision maker. I have currently employed at an NGO, Pacific Association of First Nations Women+ as an Administrator. I believe that there is no full stop to learning.
+                        <p>Born and brought up amidst the Lush green Himalayas of Nepal, currently residing in the Beautiful British Columbia, I am Prakash Neupane, an individual full of life, zeal, enthusiasm, and dedication. I  am a team-player, and a great decision maker. I have currently employed at an NGO, Pacific Association of First Nations Women+ as an Administrator. I believe that there is no full stop to learning.
                         </p>
                     </div>
                     <div class="about-box-item about-item-right">
@@ -151,13 +151,13 @@
         </div>
         <div class="contact-info">
             <div class="contact-icon">
-                <a href="mailto:tamdnguyen2111@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="neupracash@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
             <div class="contact-icon">
-                <a href="https://www.linkedin.com/in/tamdnguyen2111/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/prakash/" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
             <div class="contact-icon">
-                <a href="https://github.com/tamdnguyen" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/prakashca" target="_blank"><i class="fab fa-github"></i></a>
             </div>
             <div class="contact-icon">
                 <a href="https://www.facebook.com/prakash.neupane.125/" target="_blank"><i class="fab fa-facebook"></i></a>
