--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </tr>
                         <tr>
                             <td class="index-column">Language</td>
-                            <td>English | Neplai | Hindi (Elementary proficiency)</td>
+                            <td>English | Nepali | Hindi (Elementary proficiency)</td>
                         </tr>
                     </table>
                 </div>
