--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <a href="neupracash@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
             <div class="contact-icon">
-                <a href="https://www.linkedin.com/in/prakash/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/prakash-neupane-bb2472202" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
             <div class="contact-icon">
                 <a href="https://github.com/prakashca" target="_blank"><i class="fab fa-github"></i></a>
