--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="about-box-item intro-pic">
                     <div class="about-box-item about-item-left">
                         <h1>Hi, I'm Prakash Neupane</h1>
-                        <p>Born and brought up amidst the Lush green Himalayas of Nepal, currently residing in the Beautiful British Columbia, I am Prakash Neupane, an individual full of life, zeal, enthusiasm, and dedication. I  am a team-player, and a great decision maker. I have currently employed at an NGO, Pacific Association of First Nations Women+ as an Administrator. I believe that there is no full stop to learning.
+                        <p>Born and brought up amidst the Lush green Himalayas of Nepal, currently residing in the Beautiful British Columbia, I am Prakash Neupane, an individual full of life, zeal, enthusiasm, and dedication. I  am a team-player, and a great decision maker. I am currently employed at an NGO, Pacific Association of First Nations Women+ as an Administrator. I believe that there is no full stop to learning.
                         </p>
                     </div>
                     <div class="about-box-item about-item-right">
